tests/fail/nightly/missing_trait_regex.stderr
error[E0277]: the trait bound `Vec<usize>: RegexRepresentation` is not satisfied
  --> tests/fail/nightly/missing_trait_regex.rs:10:32
   |
10 |     sscanf::scanf!("hi", "{}", std::vec::Vec<usize>);
   |                                ^^^^^^^^^^^^^^^^^^^^ the trait `RegexRepresentation` is not implemented for `Vec<usize>`
   |
   = help: the following other types implement trait `RegexRepresentation`:
             FullF32
             FullF64
             HexNumber
             NonZeroI128
             NonZeroI16
             NonZeroI32
             NonZeroI64
             NonZeroI8
           and 26 others

error[E0080]: evaluation of constant value failed
  --> tests/fail/nightly/missing_trait_regex.rs:10:5
   |
10 |     sscanf::scanf!("hi", "{}", std::vec::Vec<usize>);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ referenced constant has errors
   |
   = note: this error originates in the macro `$crate::pmr::__concatcp_impl` which comes from the expansion of the macro `sscanf::scanf` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation of constant value failed
  --> tests/fail/nightly/missing_trait_regex.rs:10:5
   |
10 |     sscanf::scanf!("hi", "{}", std::vec::Vec<usize>);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ referenced constant has errors
   |
   = note: this error originates in the macro `__cf_osRcTFl4A::__concatcp_inner` which comes from the expansion of the macro `sscanf::scanf` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NoRegex: RegexRepresentation` is not satisfied
  --> tests/fail/nightly/missing_trait_regex.rs:11:32
   |
11 |     sscanf::scanf!("hi", "{}", NoRegex);
   |                                ^^^^^^^ the trait `RegexRepresentation` is not implemented for `NoRegex`
   |
   = help: the following other types implement trait `RegexRepresentation`:
             FullF32
             FullF64
             HexNumber
             NonZeroI128
             NonZeroI16
             NonZeroI32
             NonZeroI64
             NonZeroI8
           and 26 others

error[E0080]: evaluation of constant value failed
  --> tests/fail/nightly/missing_trait_regex.rs:11:5
   |
11 |     sscanf::scanf!("hi", "{}", NoRegex);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ referenced constant has errors
   |
   = note: this error originates in the macro `$crate::pmr::__concatcp_impl` which comes from the expansion of the macro `sscanf::scanf` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation of constant value failed
  --> tests/fail/nightly/missing_trait_regex.rs:11:5
   |
11 |     sscanf::scanf!("hi", "{}", NoRegex);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ referenced constant has errors
   |
   = note: this error originates in the macro `__cf_osRcTFl4A::__concatcp_inner` which comes from the expansion of the macro `sscanf::scanf` (in Nightly builds, run with -Z macro-backtrace for more info)
